--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
             
             <div class="backandnext2">
                 <div class="back2">
-                   <a href="/index.html"><button>Back</button></a> 
+                   <a href="./index.html"><button>Back</button></a> 
                 </div>
             
             <div class="next2">
@@ -37,5 +37,5 @@
         </div>
         </form>
         <script src="app.js"></script>
-</body>
+</body>         
 </html>
